--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intro-to-code-js",
-  "version": "1.4.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,8 @@
     "test-02": "mocha './02-Conditionals/**.js'",
     "test-03": "mocha './03-Methods-and-Functions/**.js'",
     "test-04": "mocha './04-Arrays-and-Loops/**.js'",
-    "test:mochawesome": "mocha './**/**.js' --reporter=mochawesome --reporter-options autoOpen=true",
-    "test-unsorted": "mocha './unsorted/**.js'"
+    "test-05": "mocha './05-Callbacks-Iterators/**.js'",
+    "test:mochawesome": "mocha './**/**.js' --reporter=mochawesome --reporter-options autoOpen=true"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,10 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/register": "^7.12.13",
     "chai": "^4.2.0",
-    "jsdoc": "^3.6.6",
     "mocha": "^8.2.1",
     "mochawesome": "^6.2.1"
+  },
+  "dependencies": {
+    "sinon": "^10.0.0"
   }
 }
