refactor(0X-Guide): move typeCollector to debug update 'test-debug' command to handle new data/test folder structure

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test-05": "mocha './05-Callbacks-Iterators/**.js'",
     "test-06": "mocha './06-Objects/**.js'",
     "test-07": "mocha './07-Objects-2/tests/**.js'",
-    "test-debug": "mocha './debug/**.js'",
+    "test-debug": "mocha './debug/tests/**.test.js'",
     "test:mochawesome": "mocha './**/**.js' --reporter=mochawesome --reporter-options autoOpen=true",
     "md-docs": "npm run md-01 && npm run md-02 && npm run md-03 && npm run md-04 && npm run md-05 && npm run md-06",
     "md-01": "jsdoc2md './01-Values-and-Data-Types/index.js' > docs/01-Values-and-Data-Types.md",
