feat(09-Classes): add 01-rectangle problem, info, and tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test-06": "mocha './06-Objects/**.js'",
     "test-07": "mocha './07-Objects-2/tests/**.js'",
     "test-08": "mocha './08-Recursion/tests/**.js'",
+    "test-09": "mocha './09-Classes/tests/**.js'",
     "test-debug": "mocha './debug/tests/**.test.js'",
     "test:mochawesome": "mocha './**/**.js' --reporter=mochawesome --reporter-options autoOpen=true",
     "md-docs": "npm run md-01 && npm run md-02 && npm run md-03 && npm run md-04 && npm run md-05 && npm run md-06",
