--- a/package.json
+++ b/package.json
@@ -42,10 +42,18 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.22.5",
     "chai": "^4.3.7",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jsdoc-to-markdown": "^7.0.1",
     "jsdocs": "^1.0.0",
     "mocha": "^8.4.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
     "sinon": "^10.0.0"
