#27: remove 01 answers, make 01 tests pending

--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "description": "A repo meant new JS learners help with guided topic-centered practice problems.",
   "scripts": {
-    "test-01": "mocha './lessons/01-Values-and-Data-Types/tests/**.js'",
-    "test-02": "mocha './lessons/02-Conditionals/tests/**.js'",
-    "test-03": "mocha './lessons/03-Methods-and-Functions/tests/**.js'",
-    "test-04": "mocha './lessons/04-Arrays-and-Loops/**.js'",
-    "test-05": "mocha './lessons/05-Callbacks-Iterators/tests/**.js'",
-    "test-06": "mocha './lessons/06-Objects/tests/**.js'",
-    "test-07": "mocha './lessons/07-Objects-2/tests/**.js'",
-    "test-08": "mocha './lessons/08-Recursion/tests/**.js'",
-    "test-09": "mocha './lessons/09-Classes/tests/**.js'",
-    "test-10": "mocha './lessons/10-Data-Structures/tests/**.js'",
-    "test-twitter": "mocha './11-Projects/Twitter/tests/**.js'",
-    "test:mochawesome": "mocha './**/**.js' --reporter=mochawesome --reporter-options autoOpen=true"
+    "test-01": "mocha './lessons/01-Values-and-Data-Types/**.test.js'",
+    "test-02": "mocha './lessons/02-Conditionals/tests/**.test.js'",
+    "test-03": "mocha './lessons/03-Methods-and-Functions/tests/**.test.js'",
+    "test-04": "mocha './lessons/04-Arrays-and-Loops/**.test.js'",
+    "test-05": "mocha './lessons/05-Callbacks-Iterators/tests/**.test.js'",
+    "test-06": "mocha './lessons/06-Objects/tests/**.test.js'",
+    "test-07": "mocha './lessons/07-Objects-2/tests/**.test.js'",
+    "test-08": "mocha './lessons/08-Recursion/tests/**.test.js'",
+    "test-09": "mocha './lessons/09-Classes/tests/**.test.js'",
+    "test-10": "mocha './lessons/10-Data-Structures/tests/**.test.js'",
+    "test-twitter": "mocha './11-Projects/Twitter/tests/**.test.js'",
+    "test:mochawesome": "mocha './**/**.test.js' --reporter=mochawesome --reporter-options autoOpen=true"
   },
   "repository": {
     "type": "git",
