CODE-27: update main to new lesson structure 01 to 03 (#28)
* feat(01-Values): first commit of first lesson
* feat(01-Values): add #4 Quickest Math Class answers
* feat(01-Values): add #4: Quickest Math Class test code; remove answers
* feat(01-Values): rename #4 to #5; add #4: Null and undefined
* feat(01-Values): add answers to code; all tests pass
* feat(01-Values): add #6 test code and answers; all tests pass
* feat(01-Values): unify #6 .split() code; all tests pass
* feat(02-Conditionals): add answers and tests; all passing
* fix(02-Conditionals): add 'function block' wording to instructions
* feat(02-Conditionals): add #3 and #4 with answers and test codes; add tests
* fix(02-Conditionals): fix numbering of final question: 4 -> 5
* fix(02-Answers): add per-unit test commands; prune folders
* feat(02-Answers): add explanations to answers; provide other switch case example for truthyFalsy
* feat(03-Answers): add numberOrString problem and test code; add 'test-03' command; add 03 base file
* feat(03-Answers): add base problems; test code WIP
* feat(03-Answers): add numbering; descriptions, examples; challenges; all test code passing
* feat(03-Methods): add REPL friendly instructions to each index
* feat(04-Answers): add base problems, answers and test code
* feat(04-Answers): add pairMultiplier answer and test code; refactor wordCalculator test code
* Bumped version to 1.4.1
* feat(0X-Guide): complete Problem guide thru 4 chapters
* update: merge README from 04-Arrays-and-Loops
* update: merge README with initial checkout instructions
* docs: add wording to 04-Arrays
* update(04-Ans): add FizzBuzz problem, answers and tests
* feat(0X-Guide): make unsorted folder; add first q's
* feat(0X-Guide): add more unsorted problem bases
* feat(0X-Guide): bring 05 base questions to guide branch
* feat(unsorted): add recursive sqrt and filter
* feat(05-Ans): add base to coolNums problem
* feat(05-Callbacks): add base to keyValidator
* feat(0X-Gu

--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
   "name": "intro-to-code-js",
-  "version": "1.2.0",
-  "description": "",
-  "main": "index.js",
+  "version": "2.2.0",
+  "private": true,
+  "description": "A repo meant new JS learners help with guided topic-centered practice problems.",
   "scripts": {
-    "test-01": "mocha './01-Values-and-Data-Types/**.js'",
-    "test:mochawesome": "mocha './**/index.js' --reporter=mochawesome --reporter-options autoOpen=true"
+    "test-01": "mocha './lessons/01-Values-and-Data-Types/**.test.js'",
+    "test-02": "mocha './lessons/02-Conditionals/tests/**.test.js'",
+    "test-03": "mocha './lessons/03-Methods-and-Functions/tests/**.test.js'",
+    "test-04": "mocha './lessons/04-Arrays-and-Loops/**.test.js'",
+    "test-05": "mocha './lessons/05-Callbacks-Iterators/tests/**.test.js'",
+    "test-06": "mocha './lessons/06-Objects/tests/**.test.js'",
+    "test-07": "mocha './lessons/07-Objects-2/tests/**.test.js'",
+    "test-08": "mocha './lessons/08-Recursion/tests/**.test.js'",
+    "test-09": "mocha './lessons/09-Classes/tests/**.test.js'",
+    "test-10": "mocha './lessons/10-Data-Structures/tests/**.test.js'",
+    "test-twitter": "mocha './11-Projects/Twitter/tests/**.test.js'",
+    "test:mochawesome": "mocha './**/**.test.js' --reporter=mochawesome --reporter-options autoOpen=true"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chrismejia/intro-to-code-js.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Christian Mejia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chrismejia/intro-to-code-js/issues"
   },
   "homepage": "https://github.com/chrismejia/intro-to-code-js#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/register": "^7.12.13",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
-    "mochawesome": "^6.2.1"
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "chai": "^4.3.7",
+    "jsdoc-to-markdown": "^7.0.1",
+    "jsdocs": "^1.0.0",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "sinon": "^10.0.0"
   }
 }
