--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:03": "mocha './lessons/03-Methods-and-Functions/tests/**.js'",
     "test:04": "mocha './lessons/04-Arrays-and-Loops/tests/**.js'",
     "test:05": "mocha './lessons/05-Callbacks-Iterators/tests/**.js'",
-    "test:06": "mocha './lessons/06-Objects/tests/**.js'"
+    "test:06": "mocha './lessons/06-Objects/tests/**.js'",
+    "test:07": "mocha './lessons/07-Adv-Objects/tests/**.js'"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.22.5",
     "chai": "^4.3.7",
-    "jsdoc-to-markdown": "^7.0.1",
-    "jsdocs": "^1.0.0",
-    "mocha": "^8.4.0",
-    "nodemon": "^2.0.22"
+    "mocha": "^8.4.0"
   },
   "dependencies": {
     "sinon": "^10.0.1"
