--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:04": "mocha './lessons/04-Arrays-and-Loops/tests/**.js'",
     "test:05": "mocha './lessons/05-Callbacks-Iterators/tests/**.js'",
     "test:06": "mocha './lessons/06-Objects/tests/**.js'",
-    "test:07": "mocha './lessons/07-Adv-Objects/tests/**.js'"
+    "test:07": "mocha './lessons/07-Adv-Objects/tests/**.js'",
+    "test:08": "mocha './lessons/08-Async-Await-APIs/tests/**.js'"
   },
   "repository": {
     "type": "git",
